--- a/index.html
+++ b/index.html
@@ -3,32 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Horário Acadêmico 2026.1</title>
+    <title>Horário Acadêmico 2026.1</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="glass-container">
         <header>
-            <h1>Horário de Aulas 2026.1</h1>
-            <p>Professor: RENATO</p>
+            <h1>Grade Horária <span>2026.1</span></h1>
         </header>
-
-        <div class="table-wrapper">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Horário</th>
-                        <th>Segunda</th>
-                        <th>Terça</th>
-                        <th>Quarta</th>
-                        <th>Quinta</th>
-                        <th>Sexta</th>
-                    </tr>
-                </thead>
-                <tbody id="schedule-body">
-                    </tbody>
-            </table>
-        </div>
+        
+        <main class="schedule-grid" id="schedule-container">
+            </main>
     </div>
     <script src="script.js"></script>
 </body>
