--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horário Acadêmico 2026.1</title>
+    <title>Horário 2026.1</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="glass-container">
+    <div class="dashboard">
         <header>
-            <h1>Grade Horária <span>2026.1</span></h1>
+            <h1>IFMA <span>2026.1</span></h1>
         </header>
-        
-        <main class="schedule-grid" id="schedule-container">
-            </main>
+        <div class="grid-container" id="schedule"></div>
     </div>
     <script src="script.js"></script>
 </body>
