--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horário 2026.1</title>
+    <title>IFMA 2026.1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="dashboard">
-        <header>
-            <h1>IFMA <span>2026.1</span></h1>
-        </header>
-        <div class="grid-container" id="schedule"></div>
+    <div class="main-wrapper">
+        <div class="grid-container" id="schedule">
+            </div>
     </div>
     <script src="script.js"></script>
 </body>
