--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IFMA 2026.1</title>
+    <title>Horário IFMA 2026.1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-wrapper">
-        <div class="grid-container" id="schedule">
+    <div class="main-container">
+        <header>
+            <h1>IFMA <span>2026.1</span></h1>
+        </header>
+        
+        <div class="grid-2x2" id="schedule-grid">
             </div>
     </div>
     <script src="script.js"></script>
