--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horário IFMA 2026.1</title>
+    <title>Horário 2026.1</title>
+    <link rel="icon" type="image/png" href="images.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-container">
         <header>
-            <h1>IFMA <span>2026.1</span></h1>
+            <img src="images (1).png" alt="Cabeçalho" class="header-img">
+            <h1>Horário <span>2026.1</span></h1>
         </header>
         
         <div class="grid-2x2" id="schedule-grid">
