--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-container">
         <header>
-            <img src="images (1).png" alt="Cabeçalho" class="header-img">
+            <img src="images.png" alt="Cabeçalho" class="header-img">
             <h1>Horário <span>2026.1</span></h1>
         </header>
         
