Update schedule cards to use links and add URLs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         .logo {
-            width: 160px; /* Dobro do tamanho anterior ou largura do título */
+            width: 160px; 
             height: auto;
             margin-bottom: 10px;
             object-fit: contain;
@@ -62,6 +62,7 @@
             gap: 15px;
         }
 
+        /* Card como Link */
         .day-card {
             background: #111;
             border: 2px solid #222;
@@ -72,12 +73,15 @@
             align-items: center;
             justify-content: center;
             transition: all 0.3s ease;
+            text-decoration: none; /* Remove sublinhado do link */
+            cursor: pointer;
         }
 
-        /* Destaque Vermelho */
+        /* Destaque Vermelho ao passar o mouse */
         .day-card:hover {
             border-color: #e74c3c;
             transform: scale(1.02);
+            background: #161616;
         }
 
         .day-label {
@@ -123,17 +127,44 @@
 
     <script>
         const mySchedule = [
-            { day: "Segunda", start: "20:50", end: "22:30", code: "293-P" },
-            { day: "Quarta",  start: "15:10", end: "16:50", code: "162-I" },
-            { day: "Quinta",  start: "19:00", end: "20:40", code: "393-P" },
-            { day: "Sexta",   start: "15:10", end: "16:50", code: "122-I" }
+            { 
+                day: "Segunda", 
+                start: "20:50", 
+                end: "22:30", 
+                code: "293-P", 
+                url: "https://suap.ifma.edu.br/edu/meu_diario/135062/1/?tab=aulas#etapa" 
+            },
+            { 
+                day: "Quarta",  
+                start: "15:10", 
+                end: "16:50", 
+                code: "162-I", 
+                url: "https://suap.ifma.edu.br/edu/meu_diario/134993/1/?tab=aulas#etapa" 
+            },
+            { 
+                day: "Quinta",  
+                start: "19:00", 
+                end: "20:40", 
+                code: "393-P", 
+                url: "https://suap.ifma.edu.br/edu/meu_diario/135084/1/?tab=aulas#etapa" 
+            },
+            { 
+                day: "Sexta",   
+                start: "15:10", 
+                end: "16:50", 
+                code: "122-I", 
+                url: "https://suap.ifma.edu.br/edu/meu_diario/135143/1/?tab=aulas#etapa" 
+            }
         ];
 
         const grid = document.getElementById('schedule-grid');
 
         mySchedule.forEach(item => {
-            const card = document.createElement('div');
+            // Criamos um elemento 'a' (link) em vez de uma 'div'
+            const card = document.createElement('a');
             card.className = 'day-card';
+            card.href = item.url;
+            card.target = "_blank"; // Abre em uma nova aba
             
             card.innerHTML = `
                 <span class="day-label">${item.day}</span>
